--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Policy for Nubik: Urban Adventure">
-    <title>Privacy Policy - Nubik: Urban Adventure</title>
+    <meta name="description" content="Privacy Policy for Nubik: Urbane advantures">
+    <title>Privacy Policy - Nubik: Urbane advantures</title>
 </head>
 <body>
     <h1>Privacy Policy</h1>
     <p><strong>Effective Date:</strong> September 14, 2024</p>
     
-    <p>This Privacy Policy outlines how Nubik: Urban Adventure ("the game," "we," "our," or "us") collects, uses, and protects your information when you use our mobile game available on Google Play Market.</p>
+    <p>This Privacy Policy outlines how Nubik: Urbane advantures ("the game," "we," "our," or "us") collects, uses, and protects your information when you use our mobile game available on Google Play Market.</p>
 
     <h2>Information We Collect</h2>
     <p>The game does not directly collect personal information. However, the game includes advertising services provided by third-party networks, specifically <strong>Yandex Advertising Network</strong>, which may collect certain information to provide personalized ads. Additionally, by downloading the game from <strong>Google Play Market</strong>, some information may also be collected and processed by <strong>Google Services</strong> in accordance with their privacy policies.</p>
